--- a/0.main.tex
+++ b/0.main.tex
@@ -114,7 +114,7 @@
 
 %	TITLE SECTION
 \HRule \\[0.4cm]
-{ \huge \bfseries A Python/C++ package for \\[0.4cm] Predictive Topological Data Analysis}\\[0.4cm] 
+{ \huge \bfseries lmapper, predmap:\\[0.4cm] two Python packages for \\[0.4cm] Predictive Topological Data Analysis}\\[0.4cm] 
 \HRule \\[1.5cm]     
 
 %	AUTHOR SECTION
